# ============================================================================
# Skill 库
# ============================================================================

set(SKILL_HANDLER_SOURCES
    HitRoll.cpp
    SkillHandler.cpp
    SkillHandlerManager.cpp
    VampireSkillSlot.cpp
    OustersSkillSlot.cpp
    SkillSlot.cpp
    SkillFormula.cpp
    SkillUtil.cpp
    CastleSkillSlot.cpp
)

set(SKILL_SOURCES
    SimpleMeleeSkill.cpp
    SimpleMissileSkill.cpp
    SimpleTileMeleeSkill.cpp
    SimpleLinearMeleeSkill.cpp
    SimpleCureSkill.cpp
    SimpleTileCureSkill.cpp
    SimpleTileMissileSkill.cpp
    AttackMelee.cpp
    AttackArms.cpp
    DoubleImpact.cpp
    TripleSlasher.cpp
    RainbowSlasher.cpp
    ThunderSpark.cpp
    DancingSword.cpp
    CrossCounter.cpp
    FlashSliding.cpp
    LightningHand.cpp
    SwordWave.cpp
    SnakeCombo.cpp
    SingleBlow.cpp
    SpiralSlay.cpp
    TripleBreak.cpp
    WildSmash.cpp
    GhostBlade.cpp
    PotentialExplosion.cpp
    ShadowWalk.cpp
    ChargingPower.cpp
    HurricaneCombo.cpp
    TornadoSever.cpp
    QuickFire.cpp
    DoubleShot.cpp
    TripleShot.cpp
    MultiShot.cpp
    HeadShot.cpp
    Piercing.cpp
    Sniping.cpp
    CreateHolyWater.cpp
    Light.cpp
    DetectHidden.cpp
    AuraBall.cpp
    Bless.cpp
    ContinualLight.cpp
    Flare.cpp
    Purify.cpp
    AuraRing.cpp
    Striking.cpp
    DetectInvisibility.cpp
    AuraShield.cpp
    Visible.cpp
    CureLightWounds.cpp
    CurePoison.cpp
    ProtectionFromPoison.cpp
    CauseLightWounds.cpp
    CureSeriousWounds.cpp
    RemoveCurse.cpp
    ProtectionFromCurse.cpp
    CauseSeriousWounds.cpp
    CureCriticalWounds.cpp
    Sacrifice.cpp
    CauseCriticalWounds.cpp
    ProtectionFromAcid.cpp
    CureAll.cpp
    RegenerationSkill.cpp
    BloodDrain.cpp
    PoisonousHands.cpp
    GreenPoison.cpp
    YellowPoison.cpp
    DarkBluePoison.cpp
    GreenStalker.cpp
    AcidTouch.cpp
    AcidBolt.cpp
    AcidBall.cpp
    AcidSwamp.cpp
    Paralyze.cpp
    Doom.cpp
    Hide.cpp
    Darkness.cpp
    Invisibility.cpp
    TransformToWolf.cpp
    TransformToBat.cpp
    Unburrow.cpp
    Untransform.cpp
    Uninvisibility.cpp
    EatCorpse.cpp
    Howl.cpp
    ThrowHolyWater.cpp
    Restore.cpp
    BloodyMarker.cpp
    BloodyTunnel.cpp
    Resurrect.cpp
    Seduction.cpp
    WindDivider.cpp
    Earthquake.cpp
    MindControl.cpp
    BloodyNail.cpp
    BloodyKnife.cpp
    BloodyBall.cpp
    BloodySpear.cpp
    ThunderBolt.cpp
    Expansion.cpp
    MiracleShield.cpp
    ThunderFlash.cpp
    Berserker.cpp
    MoonlightSever.cpp
    ShadowDancing.cpp
    Typhoon.cpp
    PoisonStrike.cpp
    AcidStrike.cpp
    BloodyStrike.cpp
    PoisonStorm.cpp
    AcidStorm.cpp
    BloodyStorm.cpp
    InstallMine.cpp
    DisarmMine.cpp
    CreateBomb.cpp
    CreateMine.cpp
    Extreme.cpp
    Revealer.cpp
    VigorDrop.cpp
    EnergyDrop.cpp
    CriticalGround.cpp
    ThunderStorm.cpp
    Peace.cpp
    Activation.cpp
    HolyBlast.cpp
    Sanctuary.cpp
    Reflection.cpp
    Hymn.cpp
    Death.cpp
    Mephisto.cpp
    Transfusion.cpp
    MentalSword.cpp
    SummonCasket.cpp
    OpenCasket.cpp
    ObservingEye.cpp
    SummonMonsters.cpp
    BloodyWave.cpp
    BloodyMasterWave.cpp
    GroundAttack.cpp
    MeteorStrike.cpp
    Hallucination.cpp
    DuplicateSelf.cpp
    BloodyWall.cpp
    BloodySnake.cpp
    BloodyWarp.cpp
    SoulChain.cpp
    WideLightning.cpp
    SharpShield.cpp
    GunShotGuidance.cpp
    AirShield.cpp
    BulletOfLight.cpp
    HandsOfWisdom.cpp
    LightBall.cpp
    HolyArrow.cpp
    Rebuke.cpp
    SpiritGuard.cpp
    Regeneration.cpp
    PowerOfLand.cpp
    TurnUndead.cpp
    Armageddon.cpp
    BloodyBreaker.cpp
    RapidGliding.cpp
    MagicElusion.cpp
    PoisonMesh.cpp
    IllusionOfAvenge.cpp
    WillOfLife.cpp
    DenialMagic.cpp
    Requital.cpp
    Concealment.cpp
    SwordRay.cpp
    MultiAmputate.cpp
    HitConvert.cpp
    WildTyphoon.cpp
    UltimateBlow.cpp
    Illendue.cpp
    Lightness.cpp
    Flourish.cpp
    Evade.cpp
    SharpRound.cpp
    BackStab.cpp
    Blunting.cpp
    GammaChop.cpp
    CrossGuard.cpp
    KasasArrow.cpp
    HandsOfFire.cpp
    Prominence.cpp
    RingOfFlare.cpp
    BlazeBolt.cpp
    IceField.cpp
    WaterBarrier.cpp
    NymphRecovery.cpp
    Liberty.cpp
    Tendril.cpp
    StoneAuger.cpp
    EarthsTeeth.cpp
    GnomesWhisper.cpp
    AbsorbSoul.cpp
    HandsOfNizie.cpp
    RefusalEther.cpp
    EmissionWater.cpp
    BeatHead.cpp
    DivineSpirits.cpp
    BlitzSliding.cpp
    JabbingVein.cpp
    GreatHeal.cpp
    DivineGuidance.cpp
    BlazeWalk.cpp
    BloodyZenith.cpp
    Rediance.cpp
    LarSlash.cpp
    Trident.cpp
    HeartCatalyst.cpp
    ProtectionFromBlood.cpp
    MoleShot.cpp
    Eternity.cpp
    InstallTrap.cpp
    HolyArmor.cpp
    MercyGround.cpp
    CreateHolyPotion.cpp
    TransformToWerwolf.cpp
    GrayDarkness.cpp
    StoneSkin.cpp
    TalonOfCrow.cpp
    BiteOfDeath.cpp
    AcidEruption.cpp
    Teleport.cpp
    FirePiercing.cpp
    SoulRebirth.cpp
    IceLance.cpp
    ExplosionWater.cpp
    FrozenArmor.cpp
    MagnumSpear.cpp
    ReactiveArmor.cpp
    GroundBless.cpp
    HellFire.cpp
    SharpChakram.cpp
    DestructionSpear.cpp
    ShiftBreak.cpp
    FatalSnick.cpp
    ChargingAttack.cpp
    DuckingWallop.cpp
    DistanceBlitz.cpp
    SummonGroundElemental.cpp
    SummonFireElemental.cpp
    SummonWaterElemental.cpp
    MeteorStorm.cpp
    WideIceField.cpp
    Glacier1.cpp
    Glacier2.cpp
    IceAuger.cpp
    IceHail.cpp
    WideIceHail.cpp
    IceWave.cpp
    LandMineExplosion.cpp
    ClaymoreExplosion.cpp
    PleasureExplosion.cpp
    DeleoEfficio.cpp
    ReputoFactum.cpp
    SwordOfThor.cpp
    BurningSolCharging.cpp
    BurningSolLaunch.cpp
    SweepVice.cpp
    Whitsuntide.cpp
    ViolentPhantom.cpp
    InstallTurret.cpp
    TurretFire.cpp
    SummonGoreGland.cpp
    GoreGlandFire.cpp
    ThrowingAxe.cpp
    ChoppingFirewood.cpp
    ChainThrowingAxe.cpp
    MultiThrowingAxe.cpp
    PlayingWithFire.cpp
    InfinityThunderbolt.cpp
    SpitStream.cpp
    PlasmaRocketLauncher.cpp
    BombingStar.cpp
    IntimateGrail.cpp
    NooseOfWraith.cpp
    SetAfire.cpp
    SharpHail.cpp
    IceHorizon.cpp
    FuryOfGnome.cpp
    SummonMiga.cpp
    SummonMigaAttack.cpp
    Cannonade.cpp
    SelfDestruction.cpp
    ARAttack.cpp
    SMGAttack.cpp
    GrenadeAttack.cpp
    Halo.cpp
    Destinies.cpp
    FierceFlame.cpp
    ShadowOfStorm.cpp
    WildWolf.cpp
    Aberration.cpp
    DragonTornado.cpp
    BikeCrash.cpp
    HarpoonBomb.cpp
    PassingHeal.cpp
    RottenApple.cpp
    MonsterRangeSkill.cpp
    BloodyScarify.cpp
    BloodCurse.cpp
    ShineSword.cpp
    BombCrashWalk.cpp
    SatelliteBomb.cpp
    IllusionInversion.cpp
    HeavenGround.cpp
    DummyDrake.cpp
    HydroConvergence.cpp
    SummonClay.cpp
    HeterChakram.cpp
    BigRockfall.cpp
    BrambleHalo.cpp
    CutStorm.cpp
    DeadlyClaw.cpp
    FireMeteor.cpp
    PenetrateWheel.cpp
    RapidFreeze.cpp
    SacredStamp.cpp
    SkyFire.cpp
    VoodooRing.cpp
    XRLMissile.cpp
)


set(SKILL_EFFECT_SOURCES
    EffectAcidSwamp.cpp
    EffectAuraShield.cpp
    EffectBless.cpp
    EffectBloodDrain.cpp
    EffectCrossCounter.cpp
    EffectDoom.cpp
    EffectDarkBluePoison.cpp
    EffectDarkness.cpp
    EffectRevealer.cpp
    EffectDetectHidden.cpp
    EffectDetectInvisibility.cpp
    EffectDetectMine.cpp
    EffectFadeOut.cpp
    EffectGreenPoison.cpp
    EffectGreenStalker.cpp
    EffectInvisibility.cpp
    EffectLight.cpp
    EffectPoison.cpp
    EffectPotentialExplosion.cpp
    EffectProtectionFromCurse.cpp
    EffectProtectionFromPoison.cpp
    EffectParalyze.cpp
    EffectRegeneration.cpp
    EffectReloadTimer.cpp
    EffectStriking.cpp
    EffectTransformToWolf.cpp
    EffectTransformToBat.cpp
    EffectYellowPoison.cpp
    EffectYellowPoisonToCreature.cpp
    EffectFlare.cpp
    EffectDancingSword.cpp
    EffectSnipingMode.cpp
    EffectChargingPower.cpp
    EffectGhostBlade.cpp
    EffectProtectionFromAcid.cpp
    EffectSacrifice.cpp
    EffectVampirePortal.cpp
    EffectSeduction.cpp
    EffectMindControl.cpp
    EffectExpansion.cpp
    EffectMiracleShield.cpp
    EffectBerserker.cpp
    EffectTyphoon.cpp
    EffectCureCriticalWounds.cpp
    EffectRestore.cpp
    EffectExtreme.cpp
    EffectAcidStorm.cpp
    EffectStormAcid.cpp
    EffectBloodyStorm.cpp
    EffectStormBloody.cpp
    EffectPoisonStorm.cpp
    EffectEnergyDrop.cpp
    EffectEnergyDropToCreature.cpp
    EffectVigorDrop.cpp
    EffectVigorDropToCreature.cpp
    EffectStormPoison.cpp
    EffectCauseCriticalWounds.cpp
    EffectPeace.cpp
    EffectActivation.cpp
    EffectSanctuary.cpp
    EffectReflection.cpp
    EffectHymn.cpp
    EffectDeath.cpp
    EffectSummonCasket.cpp
    EffectMephisto.cpp
    EffectObservingEye.cpp
    EffectGroundAttack.cpp
    EffectMeteorStrike.cpp
    EffectHallucination.cpp
    EffectDecreaseHP.cpp
    EffectBloodyWall.cpp
    EffectBloodySnake.cpp
    EffectBloodyWallBlocked.cpp
    EffectSoulChain.cpp
    EffectSharpShield.cpp
    EffectGunShotGuidanceAim.cpp
    EffectGunShotGuidancePoint.cpp
    EffectAirShield.cpp
    EffectSleep.cpp
    EffectSpiritGuard.cpp
    EffectArmageddon.cpp
    EffectTileStorm.cpp
    EffectMagicElusion.cpp
    EffectPoisonMesh.cpp
    EffectWillOfLife.cpp
    EffectDenialMagic.cpp
    EffectRequital.cpp
    EffectConcealment.cpp
    EffectLightness.cpp
    EffectEvade.cpp
    EffectBlunting.cpp
    EffectCrossGuard.cpp
    EffectHandsOfFire.cpp
    EffectProminence.cpp
    EffectRingOfFlare.cpp
    EffectIceField.cpp
    EffectIceFieldToCreature.cpp
    EffectWaterBarrier.cpp
    EffectTendril.cpp
    EffectGnomesWhisper.cpp
    EffectSummonSylph.cpp
    EffectIceOfSoulStone.cpp
    EffectBlockHead.cpp
    EffectDivineSpirits.cpp
    EffectContinualBloodyWall.cpp
    EffectJabbingVein.cpp
    EffectDivineGuidance.cpp
    EffectBlazeWalk.cpp
    EffectRediance.cpp
    EffectHeartCatalyst.cpp
    EffectProtectionFromBlood.cpp
    EffectEternity.cpp
    EffectTrapInstalled.cpp
    EffectTrapTriggered.cpp
    EffectHolyArmor.cpp
    EffectMercyGround.cpp
    EffectTransformToWerwolf.cpp
    EffectGrayDarkness.cpp
    EffectStoneSkin.cpp
    EffectHowl.cpp
    EffectAcidEruption.cpp
    EffectExplosionWater.cpp
    EffectFrozenArmor.cpp
    EffectMagnumSpear.cpp
    EffectReactiveArmor.cpp
    EffectGroundBless.cpp
    EffectHellFire.cpp
    EffectHellFireToEnemy.cpp
    EffectSharpChakram.cpp
    EffectDestructionSpear.cpp
    EffectSummonGroundElemental.cpp
    EffectGroundElemental.cpp
    EffectSummonFireElemental.cpp
    EffectSummonWaterElemental.cpp
    EffectBlindness.cpp
    EffectIceHail.cpp
    EffectIceHailToTile.cpp
    EffectReputoFactum.cpp
    EffectSwordOfThor.cpp
    EffectBurningSolCharging.cpp
    EffectWhitsuntide.cpp
    EffectInstallTurret.cpp
    EffectPlasmaRocketLauncher.cpp
    EffectIntimateGrail.cpp
    EffectSetAfire.cpp
    EffectIceHorizon.cpp
    EffectFuryOfGnome.cpp
    EffectFuryOfGnomeMark.cpp
    EffectSharpHail.cpp
    EffectCannonade.cpp
    EffectHalo.cpp
    EffectDestinies.cpp
    EffectFierceFlame.cpp
    EffectShadowOfStorm.cpp
    EffectAberration.cpp
    EffectDragonTornado.cpp
    EffectHarpoonBomb.cpp
    EffectPassingHeal.cpp
    EffectBloodCurse.cpp
    EffectBombCrashWalk.cpp
    EffectBombCrashWalkToEnemy.cpp
    EffectSatelliteBombAim.cpp
    EffectSatelliteBombPoint.cpp
    EffectHeavenGround.cpp
    EffectDummyDrake.cpp
    EffectHydroConvergence.cpp
    EffectSummonClay.cpp
    EffectHeterChakram.cpp
    EffectBrambleHalo.cpp
    EffectFireMeteor.cpp
    EffectPenetrateWheel.cpp
    EffectRapidFreeze.cpp
    EffectXRLMissile.cpp
)

add_library(Skill STATIC
    ${SKILL_HANDLER_SOURCES}
    ${SKILL_SOURCES}
    ${SKILL_EFFECT_SOURCES}
)

target_compile_definitions(Skill PRIVATE __GAME_SERVER__)
target_include_directories(Skill PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/src/Core
    ${CMAKE_SOURCE_DIR}/src/server
    ${CMAKE_SOURCE_DIR}/src/server/database
    ${CMAKE_SOURCE_DIR}/src/server/gameserver
)
